Make footer fixed at bottom of viewport with content scrolling behind

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,6 +8,14 @@
 
 }
 
+footer.fixed-bottom {
+  z-index: 1030;
+}
+
+body {
+  padding-bottom: 70px;
+}
+
 .footer-container {
   width: 100%;
   display: flex;
